# Linux_develop_projects

./: linux_development.code-workspace  quick_guide.md
Basic_project_example/: .clang-format  CMakeLists.txt  README.md
Basic_project_example/include/: utils.h
Basic_project_example/scripts/: build.sh  clean.sh  run.sh
Basic_project_example/src/: main.c  utils.c
Basic_project_example/tests/: README.md
